fix: update sidebar z-index to fix overlapping

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -19713,7 +19713,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 .bd-docs-nav, .bd-docs-side {
   background-color: #fafafa;
   width: 11.25rem;
-  z-index: 3;
+  z-index: 31;
 }
 
 .bd-docs-toggles {
